--- a/pom.xml
+++ b/pom.xml
@@ -100,6 +100,7 @@
 
     <build>
         <finalName>myssm</finalName>
+        <!-- 自动生成的 mybatis 并未使用 -->
         <plugins>
             <plugin>
                 <groupId>org.mybatis.generator</groupId>
