修改数据库配置文件 修改 web.xml 修改 mysql-connection 版本

--- a/src/main/resources/dbconfig.properties
+++ b/src/main/resources/dbconfig.properties
@@ -1,5 +1,5 @@
-driverClassName = com.mysql.jdbc.Driver;
+driverClassName = com.mysql.jdbc.Driver
 #jdbc_url = jdbc:mysql://127.0.0.1/myssm;
-jdbc_url = jdbc\:mysql\://localhost\:3306/test;
-jdbc_username = root;
-jdbc_password = 123456;
+jdbc_url = jdbc\:mysql\://localhost\:3306/test
+jdbc_username = root
+jdbc_password = 123456
