--- a/src/main/resources/jdbc.properties
+++ b/src/main/resources/jdbc.properties
@@ -1,5 +1,6 @@
 driverClassName = com.mysql.jdbc.Driver
 #jdbc_url = jdbc:mysql://127.0.0.1/myssm;
-jdbc_url = jdbc\:mysql\://localhost\:3306/test
+#jdbc_url = jdbc\:mysql\://localhost\:3306/test
+jdbc_url = jdbc:mysql://localhost:3306/test
 jdbc_username = root
 jdbc_password = 123
