--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,11 @@
             <scope>test</scope>
         </dependency>
 
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>jstl</artifactId>
+            <version>1.2</version>
+        </dependency>
 
         <!-- mysql驱动包 -->
         <dependency>
