修改 controller 层，新增 log4j2 日志的对象代码至实现类中： private static Logger logger = LogManager.getLogger(UserControllerImp.class); 修改数据库配置文件，新增统一编码为UTF-8 新增 log4j2 日志的 log4j.xml 配置文件，取消 log4j1日志的lo4j.properties配置文件 修改 Spring-mybatis.xml 配置文件，修改 DataSource 数据源为阿里云的德鲁伊数据源，新增德鲁伊连接池配置，此处不合理将来需要修改 新增根目录 wep-app 下 index.jsp 文件 修改 pom.xml 配置文件，新增 JUnit 4.11 和 Mock 3.2，新增 log4j-web 2.7 ，取消 log4j-slf4j-impl 2.7

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -26,6 +26,20 @@
         <listener-class>org.springframework.web.util.IntrospectorCleanupListener</listener-class>
     </listener>
 
+    <!-- 配置 log4j2.x 日志，配置文件与以往的 log4j 不同，只能采用.xml、.json或者 .jsn格式，对于 Web 项目生成日志文件需要加入-->
+    <listener>
+        <listener-class>org.apache.logging.log4j.web.Log4jServletContextListener</listener-class>
+    </listener>
+    <filter>
+        <filter-name>log4jServletFilter</filter-name>
+        <filter-class>org.apache.logging.log4j.web.Log4jServletFilter</filter-class>
+    </filter>
+    <filter-mapping>
+        <filter-name>log4jServletFilter</filter-name>
+        <url-pattern>/*</url-pattern>
+    </filter-mapping>
+    <!-- log4j2.x end -->
+
     <!-- 配置SESSION超时，单位是分钟 -->
     <session-config>
         <session-timeout>15</session-timeout>
