--- a/src/main/resources/jdbc.properties
+++ b/src/main/resources/jdbc.properties
@@ -4,3 +4,34 @@ driverClassName = com.mysql.jdbc.Driver
 jdbc_url = jdbc:mysql://localhost:3306/test?useUnicode\=true&characterEncoding\=utf8&characterSetResults\=utf8
 jdbc_username = root
 jdbc_password = 123
+
+# 配置初始化大小、最小、最大
+initialSize = 5
+minIdle = 10
+maxActive = 20
+# 配置获取连接等待超时的时间
+maxWait = 60000
+
+#配置间隔多久才进行一次检测，检测需要关闭的空闲连接，单位是毫秒
+timeBetweenEvictionRunsMillis = 60000
+# 配置一个连接在池中最小生存的时间，单位是毫秒
+minEvictableIdleTimeMillis = 300000
+
+validationQuery = SELECT 'x'
+testWhileIdle = true
+testOnBorrow = false
+testOnReturn = false
+
+# 打开PSCache，并且指定每个连接上PSCache的大小
+poolPreparedStatements = true
+maxPoolPreparedStatementPerConnectionSize = 20
+
+# 连接泄漏处理。Druid提供了RemoveAbandanded相关配置，用来关闭长时间不使用的连接（例如忘记关闭连接）。
+removeAbandoned = true
+# 1800秒，也就是30分钟
+removeAbandonedTimeout = 1800
+# 关闭abanded连接时输出错误日志
+logAbandoned = true
+
+# 配置监控统计拦截的filters, 监控统计："stat",防SQL注入："wall",组合使用： "stat,wall"
+filters = stat
