--- a/pom.xml
+++ b/pom.xml
@@ -49,11 +49,11 @@
             <version>3.3.0</version>
         </dependency> -->
         <!-- 代码生成器 -->
-        <!-- <dependency>
+         <dependency>
             <groupId>com.baomidou</groupId>
             <artifactId>mybatis-plus-generator</artifactId>
             <version>3.3.0</version>
-        </dependency> -->
+        </dependency>
         <!-- https://mvnrepository.com/artifact/com.baomidou/mybatis-plus-boot-starter -->
         <dependency>
             <groupId>com.baomidou</groupId>
