update jdbc --> &serverTimezone=UTC

--- a/src/main/resources/jdbc.properties
+++ b/src/main/resources/jdbc.properties
@@ -1,9 +1,9 @@
 driverClassName = com.mysql.jdbc.Driver
 #jdbc_url = jdbc:mysql://127.0.0.1/myssm;
 #jdbc_url = jdbc\:mysql\://localhost\:3306/test
-jdbc_url = jdbc:mysql://localhost:3306/test?useUnicode\=true&characterEncoding\=utf8&characterSetResults\=utf8
+jdbc_url = jdbc:mysql://localhost:3306/leo?useUnicode\=true&characterEncoding\=utf8&characterSetResults\=utf8&serverTimezone=UTC
 jdbc_username = root
-jdbc_password = 123456
+jdbc_password = 123
 
 # 配置初始化大小、最小、最大
 initialSize = 5
