--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,7 @@
         <gson.version>2.8.6</gson.version>
         <commons.lang3.version>3.9</commons.lang3.version>
 
-        <servlet.version>4.0.0</servlet.version>
+        <!--<servlet.version>4.0.1</servlet.version>-->
         <jstl.version>1.2</jstl.version>
 
         <springboot.version>2.2.2.RELEASE</springboot.version>
@@ -88,13 +88,20 @@
             <version>${commons.lang3.version}</version>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/javax.servlet/javax.servlet-api -->
+        <!--<dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>javax.servlet-api</artifactId>
+            <version>${servlet.version}</version>
+            <scope>provided</scope>
+        </dependency>-->
         <!-- https://mvnrepository.com/artifact/javax.servlet/servlet-api -->
-        <dependency>
+        <!--<dependency>
             <groupId>javax.servlet</groupId>
             <artifactId>servlet-api</artifactId>
             <version>${servlet.version}</version>
             <scope>provided</scope>
-        </dependency>
+        </dependency>-->
         <!-- jstl -->
         <dependency>
             <groupId>javax.servlet</groupId>
