--- a/pom.xml
+++ b/pom.xml
@@ -20,11 +20,11 @@
         <gson.version>2.8.6</gson.version>
         <commons.lang3.version>3.9</commons.lang3.version>
 
-        <!--<servlet.version>4.0.1</servlet.version>-->
+        <servlet.version>3.1.0</servlet.version>
         <jstl.version>1.2</jstl.version>
 
         <springboot.version>2.2.2.RELEASE</springboot.version>
-        <spring.version>4.3.8.RELEASE</spring.version>
+        <spring.version>4.3.26.RELEASE</spring.version>
         <shiro.version>1.5.2</shiro.version>
         <junit.version>4.13</junit.version>
         <fastjson.version>1.2.68</fastjson.version>
@@ -89,12 +89,12 @@
         </dependency>
 
         <!-- https://mvnrepository.com/artifact/javax.servlet/javax.servlet-api -->
-        <!--<dependency>
+        <dependency>
             <groupId>javax.servlet</groupId>
             <artifactId>javax.servlet-api</artifactId>
             <version>${servlet.version}</version>
             <scope>provided</scope>
-        </dependency>-->
+        </dependency>
         <!-- https://mvnrepository.com/artifact/javax.servlet/servlet-api -->
         <!--<dependency>
             <groupId>javax.servlet</groupId>
@@ -106,7 +106,8 @@
         <dependency>
             <groupId>javax.servlet</groupId>
             <artifactId>jstl</artifactId>
-            <version>${jstl.version}</version>
+            <!--<version>${jstl.version}</version>-->
+            <version>1.2</version>
         </dependency>
 
         <!-- https://mvnrepository.com/artifact/at.favre.lib/bcrypt -->
