--- a/pom.xml
+++ b/pom.xml
@@ -301,6 +301,16 @@
             <artifactId>beetl</artifactId>
             <version>3.0.16.RELEASE</version>
         </dependency>
+        <dependency>
+            <groupId>commons-codec</groupId>
+            <artifactId>commons-codec</artifactId>
+            <version>1.13</version>
+        </dependency>
+        <dependency>
+            <groupId>com.sparkjava</groupId>
+            <artifactId>spark-core</artifactId>
+            <version>2.7.2</version>
+        </dependency>
 
         <!--<dependency>
             <groupId>org.apache.logging.log4j</groupId>
